Fixed strip align and size on large screens

--- a/css/large.css
+++ b/css/large.css
@@ -66,18 +66,20 @@
 
 @media screen and (min-width: 1600px) {
   .main__container {
-    height: 90%;
+    height: 95%;
   }
   .main__info__strip {
     display: flex;
-    align-items: center;
-    margin-top: 15px;
+    margin-top: auto;
   }
   .main__info__strip li {
     text-align: center;
   }
   .main__info__strip__link__image {
-    width: 80%;
+    width: 60%;
+    /* border-radius: 15%;
+    background-color: rgba(156, 15, 2);
+    padding: 5px; */
   }
   footer {
     height: 10px;
@@ -85,6 +87,9 @@
 }
 
 @media screen and (min-width: 1600px) and (max-height: 900px) {
+  .main__info__figure__image {
+    max-height: 370px;
+  }
   .main__info__strip__link__image {
     width: 50%;
   }
@@ -96,5 +101,11 @@
   }
   .main__navigation {
     justify-content: center;
+  }
+}
+
+@media screen and (min-width: 3440px) {
+  .main__info__strip {
+    margin-top: 50px;
   }
 }
